マジックナンバー減らし(まだまだゴール遠い、ゲーム・スタートEasyモードとNormalモードの実装予定)

--- a/# バグややるべきことリスト.md
+++ b/# バグややるべきことリスト.md
@@ -1,13 +1,8 @@
 # バグややるべきことリスト
 
-## バグ
-部屋またいだときに歩いているモーションがある
-きのこの敵の向きがおかしい時がある
-宝箱を開いたときに剣をフルモーションが入ってしまう
-
 ## やるべきことリスト
-剣を振ったときに煙立たせたい
-剣を振ったときエフェクトを出したい
-そもそも羽をやめたほうが良い
-ダメージ食らった時の動き追加
-ボス戦をそろそろ作り込む
+マジックナンバー減らし
+現在ボスが中途半端
+エフェクト途中まで(プレイヤー関連をやっていない)
+
+ゲーム・スタート時にイージーモードとノーマルモードの実装をするべき(全スキル獲得しているかどうか)
